k8s/media-services/miniflux/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: media-services
  labels:
    app: miniflux
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: miniflux
